--- a/Login.html
+++ b/Login.html
@@ -16,7 +16,7 @@
             <h2 class="colors"><span id="g">G</span><span id="o">o</span><span id="o2">o</span>
                 <span id="g2">g</span><span id="l">l</span><span id="e">e</span>
             </h2>
-            <p class="undergoog">تسجيل الدخول</p>
+            <p class="undergoog">login</p>
             <p class="underlogin">Google باستخدام حسابك على</p>
             <div class="inpt">
                 <input type="text" name="mailphone" id="mailphone">
